week 1 quiz testing

--- a/vshe-coursera/1.2-math_in_latex.tex
+++ b/vshe-coursera/1.2-math_in_latex.tex
@@ -178,6 +178,214 @@ $\varepsilon$, $\varphi$
 
 
 
+\section{Quiz}
+
+\subsection{6}
+
+В результате решения получаем ответ
+\[\mathbf x=\frac{-1+\frac12}
+{3+\left(\cfrac{5}{11}\right)^{12}}\]
+
+В результате решения получаем ответ
+\[\mathbf{x}=\frac{-1+\frac{1}{2}}
+{3+\left(\cfrac{5}{11}\right)^{12}}\]
+
+В результате решения получаем ответ
+\[\mathbf x=\frac{-1+\frac12}
+{3+\left(\frac{5}{11}\right)^{12}}\]
+
+\subsection{5}
+
+\[
+\frac{\partial f(x,y)}{\partial x}=\alpha(x,y)
+\Rightarrow\int\alpha(x,y)dx=f(x,y)+C.
+\]
+
+\[\frac{\partial f(x,y)}{\partial x}=\alpha(x,y)
+\Rightarrow\int\alpha(x,y)dx=f(x,y)+C.\]
+
+
+\[{x^y}^z\]
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+11
+\begin{align}
+f(x)=5x\\
+g(x)=7x
+\end{align} 
+
+22
+\begin{equation}
+\begin{aligned}
+f(x)=5x\\
+g(x)=7x
+\end{aligned}
+\end{equation}
+
+33
+\begin{equation}
+f(x)=5x\\
+g(x)=7x
+\end{equation}
+
+44
+%\begin{aligned}
+%	f(x)=5x\\
+%	g(x)=7x
+%\end{aligned}
+
+55
+\begin{equation*}
+\begin{aligned}
+f(x)=5x\\
+g(x)=7x\end{aligned}
+\end{equation*} 
+
+\subsection{8...}
+
+\begin{equation*}
+\begin{aligned}
+\Rightarrow \\
+\leftarrow \\
+\cap \\
+\sim \\
+\notin \\
+\le \\
+\cdot \\
+\geqslant \\
+\equiv \\
+\in
+\end{aligned}
+\end{equation*}
+
+\subsection{9}
+
+%\[\left\{ 
+%\begin{align} 
+%x+1=1\\ 
+%\ldots\\ 
+%x+ N = N 
+%\end{align} 
+%\right.\]
+
+%\begin{cases}
+%	x+1=1\\
+%	\ldots\\
+%	x + N = N
+%\end{cases} 
+
+%\left\{
+%\begin{aligned}
+%	x+1=1\\
+%	\ldots
+%	\\x+ N = N
+%\end{aligned}
+%\right. 
+
+%\[\left\{ 
+%\begin{aligned} 
+%x+1=1\\ 
+%\ldots\\ 
+%x+ N = N 
+%\end{aligned} 
+%\right\] 
+
+\[\left\{
+\begin{aligned}
+& x+1=1\\
+& \ldots\\
+& x + N = N
+\end{aligned}
+\right.\] 
+
+\subsection{10}
+
+\[ 
+\begin{matrix} 
+x_{11} & x_{12} & \ldots & x_{1m}\\ 
+x_{21} & x_{22} & \ldots & x_{2m}\\ 
+\vdots & \vdots & \ddots & \vdots\\ 
+x_{n1} & x_{n2} & \ldots & x_{nm} 
+\end{matrix} 
+\] 
+
+\[ 
+\begin{bmatrix} 
+x_{11} & x_{12} & \ldots & x_{1m}\\ 
+x_{21} & x_{22} & \ldots & x_{2m}\\ 
+\vdots & \vdots & \ddots & \vdots\\ 
+x_{n1} & x_{n2} & \ldots & x_{nm} 
+\end{bmatrix} 
+\] 
+
+\[ 
+\left[ 
+\begin{array}{cccc} 
+x_{11} & x_{12} & \ldots & x_{1m}\\ 
+x_{21} & x_{22} & \ldots & x_{2m}\\ 
+\vdots & \vdots & \ddots & \vdots\\ 
+x_{n1} & x_{n2} & \ldots & x_{nm} 
+\end{array} 
+\right] 
+\] 
+
+%\begin{vmatrix}
+%	1 & 2 & 3 \\
+%	4 & 5 & 6
+%\end{vmatrix} 
+
+\[ 
+\begin{vmatrix} 
+1 & 2 & 3 \\ 
+4 & 5 & 6 
+\end{vmatrix} 
+\] 
+
+\[ 
+| 
+\begin{array}{ccc} 
+1 & 2 & 3 \\ 
+4 & 5 & 6
+\end{array} 
+| 
+\] 
+
+\[ 
+\left| 
+\begin{array}{ccc} 
+1 & 2 & 3 \\ 
+4 & 5 & 6
+\end{array} 
+\right| 
+\] 
+
+%\[ 
+%\left| 
+%\begin{array}{ccc} 
+%1 & 2 & 3 
+%4 & 5 & 6 
+%\end{array} 
+%\right| 
+%\] 
+
+$ \{\} [] () | \backslash / \% \& \$ $ 
+
+\[(x^y)^z\]
+
+\subsection{7}
+
+\begin{equation}
+f(x)=5x
+\end{equation}
+
+\[ f(x)=5x \eqno (номер) \] 
+
+%\begin{aligned}
+%	f(x)=5x
+%\end{aligned} 
+
+
 
 \end{document} % конец документа
 
