more quiz week 2

--- a/hse-coursera/1.2-math_in_latex.tex
+++ b/hse-coursera/1.2-math_in_latex.tex
@@ -110,6 +110,18 @@ $\varepsilon$, $\varphi$
 \subsection{Очень длинная формула}
 
 \begin{multline}
+1+ 2+3+4+5+6+7+\dots + \\ 
++ 50+51+52+53+54+55+56+57 + \dots + \\ 
++ 96+97+98+99+100=5050
+\end{multline}
+
+\begin{multline*}
+1+ 2+3+4+5+6+7+\dots + \\ 
++ 50+51+52+53+54+55+56+57 + \dots + \\ 
++ 96+97+98+99+100=5050
+\end{multline*}
+
+\begin{multline}
 	1+ 2+3+4+5+6+7+\dots + \\ 
 	+ 50+51+52+53+54+55+56+57 + \dots + \\ 
 	+ 96+97+98+99+100=5050 \tag{S} \label{eq:sum}
@@ -117,6 +129,12 @@ $\varepsilon$, $\varphi$
 
 
 \subsection{Несколько формул}
+
+\begin{align}
+2\times 2 &= 4 & 6\times 8 &= 48 \\
+3\times 3 &= 9 & a+b &= c\\
+10 \times 65464 &= 654640 & 3/2&=1,5
+\end{align}
 
 \begin{align*}
 	2\times 2 &= 4 & 6\times 8 &= 48 \\
@@ -131,6 +149,14 @@ $\varepsilon$, $\varphi$
 		10 \times 65464 &= 654640 & 3/2&=1,5
 	\end{aligned}
 \end{equation}
+
+\begin{equation*}
+\begin{aligned}
+2\times 2 &= 4 & 6\times 8 &= 48 \\
+3\times 3 &= 9 & a+b &= c\\
+10 \times 65464 &= 654640 & 3/2&=1,5
+\end{aligned}
+\end{equation*}
 
 \subsection{Системы уравнений}
 
