comments on the lesson

--- a/hse-coursera/week2/2.tex
+++ b/hse-coursera/week2/2.tex
@@ -76,20 +76,31 @@
 
 \begin{tabular}{|p{4cm}cp{5cm}|}
 	\hline
+	\setlength\extrarowheight{6mm}  % extra top margin for rows
 	Это очень-очень длинное предложение из многих слов. & $6\times 2$ &  Это очень-очень длинное предложение из многих слов. \\ 
 	\hline
-	21 & $\displaystyle \frac{x}{y}$ & 23  \\
+	21 & $\displaystyle \frac{x}{y}$ & 23  \\[4mm]  % extra bottom margin for this row
 	\hline
+	\setlength\extrarowheight{0mm}  % top margin for rows - reset for other tables
 	31 & 32 & 33 \\ 
 	\hline 
 \end{tabular} 
 
+...
+...
+
+% столбец "с" заполняется без переносов
+% остаток ширины поровну делится между столбцами "Х"
 \begin{tabularx}{\textwidth}{X|c|X}
 	\hline
 	Это очень-очень длинное предложение из многих слов & Текст покороче & Это очень-очень длинное предложение из многих слов Это очень-очень длинное предложение из многих слов
 \end{tabularx}
 
+...
+...
 
+% ширина столбцов CJR подбирается так, чтобы высота
+% ячеек первой строки была примерно одинакова
 \begin{tabulary}{\textwidth}{C|J|R}
 	\hline
 	Это очень-очень длинное предложение из многих слов & Текст покороче & Это очень-очень длинное предложение из многих слов Это очень-очень длинное предложение из многих слов
@@ -100,16 +111,23 @@
 Смотри таблицу \ref{tab:mytab}.
 
 \begin{table}[!h]
+	% h = here - расположить плавающую таблицу рядом со ссылкой
+	% ! - форсировать такое требование
 	\begin{center}
 		\caption[Заголовок для списка таблиц]{Бессмысленная таблица, зато с кучей фишек.}\label{tab:mytab}
+		% \caption[Краткий заголовок]{Длинный заголовок}
 		\begin{tabular}{|c|c|c|c||l|c|c|r|c|c|}
   		\hline
     	1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ \hline
   		Первый & Второй & \multicolumn{3}{|c|}{Третий -- пятый} &   &  & Восьмой &   &  \\ 
+  		% \multicolumn{3}{|c|}{...} - слить 3 столбца, выровнять по центру
 		\cline{1-7} \cline{9-10}
+		% \cline - линия только под определенными столбцами
    		1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ \hline \hline
+   		% \hline \hline - двойная линия
    		1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ \hline
     	\multirow{3}{*}{Три строки}  & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ \cline{2-10}
+    	% {*} - автоматическая ширина объединённой ячейки
     	  & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ \cline{2-10}
     	  & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ \hline
 		\end{tabular}
@@ -121,6 +139,7 @@
 
 
 \begin{longtable}{|c|c|c|c|}
+	% окружение длинной, на несколько страниц, таблицы
 	\caption{Заголовок большой таблицы.}\\
 	\hline
 	\textbf{RND1} & \textbf{RND2} & \textbf{RND3} & \textbf{RND4} \\ \hline
